<resources>
    <string name="app_name">rst-l3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Real Time Systems</string>
    <string name="nav_header_subtitle">Labs 3.1, 3.2, 3.3</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_l31">3.1 Fermat\'s factorisation</string>
    <string name="menu_l32">3.2 Perceptrones</string>
    <string name="menu_l33">3.3 Genetic</string>

    <!-- l31 text vars-->
    <string name="l31_num_hint">Number to factorise</string>
    <string name="l31_btn_txt">Factorise</string>

    <!-- l32 text vars-->
    <string name="l32_switch_hint">Limit (by time|by iterations)</string>

    <string-array name="l32_time_choices">
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
    </string-array>
    <string name="l32_time_spinner_hint">Time</string>

    <string-array name="l32_iter_choices">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string name="l32_iter_spinner_hint">Iterations</string>

    <string-array name="l32_learning_choices">
        <item>0.001</item>
        <item>0.01</item>
        <item>0.05</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
    </string-array>
    <string name="l32_learning_hint">Learning speed</string>

    <string name="l32_scroll_dots">Dots:</string>
    <string name="l32_scroll_align">GT|LT</string>

    <string name="l32_btn_learn">Learn</string>

    <!-- l33 text vars-->
    <string name="home_second">Genetic algorithm</string>

    <string name="l33_strategies_tooltip">Mutation Strategy</string>
    <string-array name="l33_strategies">
        <item>roll_greatest</item>
        <item>roll_least</item>
    </string-array>

    <string name="l33_mutations_tooltip">Mutation percent</string>
    <string-array name="l33_mutations">
        <item>0.01</item>
        <item>0.05</item>
        <item>0.10</item>
        <item>0.20</item>
    </string-array>

    <string name="l33_samples_tooltip">Sample size</string>
    <string-array name="l33_sample_size">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>1000</item>
    </string-array>

    <string-array name="l33_bounds">
        <item>0.0|0.5</item>
        <item>0.0|0.75</item>
        <item>0.0|1.0</item>
        <item>0.25|0.5</item>
        <item>0.25|0.75</item>
    </string-array>

    <string name="l33_a_tooltip">a = </string>
    <string name="l33_b_tooltip">b = </string>
    <string name="l33_c_tooltip">c = </string>
    <string name="l33_d_tooltip">d = </string>
    <string name="l33_y_tooltip">y = </string>
    <string name="l33_bounds_tooltip">Random bounds</string>
    <string name="l33_button_solve">Solve</string>
</resources>
