<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_31"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_l31" />
        <item
            android:id="@+id/nav_32"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_l32" />
        <item
            android:id="@+id/nav_33"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_l33" />
    </group>
</menu>
