<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rst_l3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.rst_l3.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_31"
        android:name="com.example.rst_l3.ui.lab_31.LAB31Fragment"
        android:label="@string/menu_l31"
        tools:layout="@layout/lab31_fragment" />

    <fragment
        android:id="@+id/nav_32"
        android:name="com.example.rst_l3.ui.lab_32.LAB32Fragment"
        android:label="@string/menu_l32"
        tools:layout="@layout/lab32_fragment" />
    <fragment
        android:id="@+id/nav_33"
        android:name="com.example.rst_l3.ui.lab_33.LAB33Fragment"
        android:label="@string/menu_l33" />
</navigation>