<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lab_32.LAB32Fragment">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <Spinner
        android:id="@+id/l32_spinner_time"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/l32_time_choices"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_spinner_time_hint" />

    <Spinner
        android:id="@+id/l32_spinner_iter"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:entries="@array/l32_iter_choices"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/l32_spinner_time"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/l32_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/l32_switch_hint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_slideshow" />

    <TextView
        android:id="@+id/l32_spinner_time_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/l32_time_spinner_hint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_mode_switch" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:text="@string/l32_iter_spinner_hint"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/l32_spinner_time_hint"
        app:layout_constraintTop_toBottomOf="@+id/l32_mode_switch" />

    <Spinner
        android:id="@+id/l32_spinner_learning"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/l32_learning_choices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/l32_learning_hint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_spinner_time" />

    <ScrollView
        android:id="@+id/l32_scroll"
        android:layout_width="180dp"
        android:layout_height="300dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="100dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_spinner_iter">

        <TableLayout
            android:id="@+id/l32_scroll_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/l32_scroll_table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/l32_scroll_dots"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/l32_scroll_header_align"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/l32_scroll_align" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/l32_btn_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/l32_btn_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_spinner_learning" />

    <TextView
        android:id="@+id/l32_results_txt"
        android:layout_width="168dp"
        android:layout_height="247dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l32_btn_learn" />

</androidx.constraintlayout.widget.ConstraintLayout>